[gd_scene load_steps=8 format=3 uid="uid://ms1v61f8e6f3"]

[ext_resource type="Script" path="res://wait_lobby/wait_lobby.gd" id="1_ajb20"]
[ext_resource type="PackedScene" uid="uid://iuvi6r26wbej" path="res://game/spawn_points/spawn_points.tscn" id="1_qggt3"]
[ext_resource type="Script" path="res://wait_lobby/ui/ui.gd" id="2_4rllb"]
[ext_resource type="Theme" uid="uid://bailv3k7caocg" path="res://multiplayer/example_scene/ui/resources/selected_button_theme.tres" id="3_hph5r"]
[ext_resource type="Script" path="res://wait_lobby/ui/ip.gd" id="4_8sotc"]
[ext_resource type="Script" path="res://wait_lobby/ui/steam.gd" id="5_cue4b"]
[ext_resource type="Script" path="res://wait_lobby/ui/screen_button.gd" id="6_m5bdq"]

[node name="WaitLobby" type="Node" node_paths=PackedStringArray("spawn_points")]
script = ExtResource("1_ajb20")
spawn_points = NodePath("SpawnPoints")

[node name="SpawnPoints" parent="." instance=ExtResource("1_qggt3")]

[node name="Node2D" type="Node2D" parent="SpawnPoints"]
position = Vector2(960, 768)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_4rllb")

[node name="LocalScreen" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/LocalScreen"]
custom_minimum_size = Vector2(500, 25)
layout_mode = 2
bbcode_enabled = true
text = "[center]Press any button to join!"

[node name="IPScreen" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/IPScreen"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "ADDRESS"

[node name="Address" type="TextEdit" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
placeholder_text = "127.0.0.1"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "PORT"

[node name="Port" type="TextEdit" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
placeholder_text = "9001"

[node name="Spacer" type="Container" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Host" type="Button" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_hph5r")
text = "HOST"

[node name="Spacer2" type="Container" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Join" type="Button" parent="CanvasLayer/IPScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_hph5r")
text = "JOIN"

[node name="SteamScreen" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="CanvasLayer/SteamScreen"]
custom_minimum_size = Vector2(300, 35)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_hph5r")
text = "HOST"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 133.0
grow_horizontal = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="IP" type="Button" parent="CanvasLayer/CenterContainer/HBoxContainer" node_paths=PackedStringArray("screen")]
clip_contents = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
focus_mode = 0
theme = ExtResource("3_hph5r")
theme_override_colors/icon_normal_color = Color(0, 1, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 1, 0, 1)
text = "IP"
script = ExtResource("4_8sotc")
screen = NodePath("../../../IPScreen")

[node name="Steam" type="Button" parent="CanvasLayer/CenterContainer/HBoxContainer" node_paths=PackedStringArray("screen")]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
focus_mode = 0
text = "STEAM"
script = ExtResource("5_cue4b")
screen = NodePath("../../../SteamScreen")

[node name="Local" type="Button" parent="CanvasLayer/CenterContainer/HBoxContainer" node_paths=PackedStringArray("screen")]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
focus_mode = 0
text = "LOCAL"
script = ExtResource("6_m5bdq")
screen = NodePath("../../../LocalScreen")

[node name="Users" type="Button" parent="CanvasLayer"]
offset_left = 1655.0
offset_top = 1007.0
offset_right = 1893.0
offset_bottom = 1057.0
focus_mode = 0
text = "PRINT USERS"

[node name="Disconnect" type="Button" parent="CanvasLayer"]
offset_left = 30.0
offset_top = 993.0
offset_right = 280.0
offset_bottom = 1041.0
focus_mode = 0
text = "DISCONNECT"

[node name="Toggle UI" type="Button" parent="CanvasLayer"]
offset_left = 1653.0
offset_top = 942.0
offset_right = 1891.0
offset_bottom = 992.0
focus_mode = 0
text = "TOGGLE UI"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="Environment" type="Node" parent="."]

[node name="Background" type="ColorRect" parent="Environment"]
z_index = -10
offset_left = -64.0
offset_top = -704.0
offset_right = 1984.0
offset_bottom = 1152.0
color = Color(0.32549, 0.329412, 0.352941, 1)
metadata/_edit_lock_ = true

[node name="Foreground" type="Polygon2D" parent="Environment"]
position = Vector2(968, 1000)
color = Color(0.164706, 0.196078, 0.294118, 1)
polygon = PackedVector2Array(-144, -168, 128, -168, 256, -232, 520, -232, 648, -296, 1016, -296, 1016, 152, -1032, 152, -1032, -1704, 1016, -1704, 1016, -296, 920, -296, 920, -1640, -936, -1640, -936, -104, -144, -104)
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Environment"]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Environment/StaticBody2D"]
polygon = PackedVector2Array(-64, 896, -64, 1152, 1984, 1152, 1984, 704, 1984, -704, -64, -704, -64, 896, 32, 896, 32, -640, 1888, -640, 1888, 704, 1616, 704, 1488, 768, 1224, 768, 1096, 832, 824, 832, 824, 896)

[connection signal="pressed" from="CanvasLayer/IPScreen/VBoxContainer/Host" to="CanvasLayer/CenterContainer/HBoxContainer/IP" method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/IPScreen/VBoxContainer/Join" to="CanvasLayer/CenterContainer/HBoxContainer/IP" method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/SteamScreen/Host" to="CanvasLayer/CenterContainer/HBoxContainer/Steam" method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/HBoxContainer/Local" to="CanvasLayer" method="_on_local_pressed"]
[connection signal="pressed" from="CanvasLayer/Users" to="CanvasLayer" method="_on_users_pressed"]
[connection signal="pressed" from="CanvasLayer/Disconnect" to="CanvasLayer" method="_on_disconnect_pressed"]
[connection signal="pressed" from="CanvasLayer/Toggle UI" to="CanvasLayer" method="_on_toggle_ui_pressed"]
